[package]
name = "crypto-knapsack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4.0", features = ["serde"] }
rand = { version = "0.8.5", features = ["serde", "small_rng"] }
thiserror = "1.0.38"

[dev-dependencies]
proptest = "1.0.0"
test-case = "2.2.2"
